public class CreateUserSettings extends Settings{
}
