public class Market {
    public static void sellClothing() {

    }

    public static void buyClothing() {

    }

    public static void donateClothing() {

    }

    public static void borrowClothing() {

    }

    public static void addToBuyHistory() {


    }

    public static void addToSellHistory() {


    }

    public static void chatWindow() {

    }

    public static void savedListing() {

    }
}


