public class StartMenu {

    public void login (){

    }

    public void createUser (){

    }

}
