        @startuml
'Domænemodellen giver nye entity klasser
'Pakker, model og util
!pragma layout smetana

class Main
class StartMenu
class MainMenu

class CreateAccount
class User
class DataValidator

Abstract Settings

class Laundry
class Market
class Wardrobe
class ErrorHandling
class Category

class CreateUserSettings
class NotificationSettings

Abstract Clothing
class Pants
class Shirt
class Shoes
class Socks
class Underwear
class Suits

package "util"{
       class TextUI
       class DbIO
       }
Main *-- StartMenu
StartMenu *-- MainMenu
MainMenu *-- Settings
MainMenu *-- Laundry
MainMenu *-- Market
MainMenu *-- Wardrobe
MainMenu *-- ErrorHandling
Wardrobe *-- Category

User *-- DataValidator
CreateAccount <-- DataValidator
User *-- CreateAccount
Settings *-- CreateUserSettings
Settings *-- NotificationSettings
Wardrobe *-- Clothing
Clothing *-- Shoes
Clothing *-- Shirt
Clothing *-- Pants
Clothing *-- Socks
Clothing *-- Underwear
Clothing *-- Suits

StartMenu *-- util
StartMenu *-- User

StartMenu : + login()
StartMenu : + createUser()

MainMenu : + Wardrobe
MainMenu : + Laundry
MainMenu : + Market
MainMenu : + Settings
MainMenu : + ErrorHandling

Clothing : + String color
Clothing : + String brand
Clothing : + String clothingType
Clothing : + String seasons
Clothing : + String size
Clothing : + String material
Clothing : + String info

Shoes : + String typeOfShoes

Shirt : + String sleevesLength
Shirt : + String neck
Shirt : + String typeOfShirt

Suits : + String typeOfSuit

Pants : + boolean pockets
Pants : + String typeOfPants

Socks : + String type

Underwear : + String type

Market : + sellClothing()
Market : + buyClothing()
Market : + donateClothing()
Market : + borrowClothing()
Market : + addToBuyHistory()
Market : + addToSellHistory()
Market : + chatWindow()
Market : + savedListing()

Wardrobe : + createOutfit()
Wardrobe : + generateOutfit()
Wardrobe : + showPrewornOutfits()
Wardrobe : + addOutfitToFavorite()
Wardrobe : + addClothingToWardrobe()
Wardrobe : + removeClothingFromWardrobe()
Wardrobe : + addClothingToLaundry()

Settings : + createUserSettings()
Settings : + notificationSettings()
Settings : + logOut()
Settings : + EULA()

Laundry : + view()
Laundry : + empty()
Laundry : + removeFromBasket()


Main : + static void main(string [] args)

User : - String username
User : - String password
User : - static ArrayList <User> users


User : + User(String Username, String Password)


DataValidator : + Boolean isUsernameValid()
DataValidator : + Boolean isPassWordValid()
'-----------

CreateAccount : - Boolean createUser(String name, String Password)
CreateAccount : - Boolean addUser(new user(name, Password)
CreateAccount : - Boolean removeUser(new user(name, Password)
CreateAccount : - String UnderwearWash
CreateAccount : - String jeansWash
CreateAccount : - String socksWash
CreateAccount : - String shirtWash
CreateAccount : - getInfoFromUser()
DbIO : - Scanner scanner

'---_new-----
DbIO : + Arraylist<User> readUserData(String path)
DbIO : + void saveUserData(ArrayList<User> users)
DbIO : + String[] readLoginData(String Username, String password)

'-----------

TextUI : + String getInput(String msg)
TextUI : - Scanner scanner
TextUI : + void displayMessage(String msg)

@enduml